updating modernizer to use CDN

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html class="no-js">
 	<head>
 		<!-- META CONTENT -->
         <meta charset="utf-8">
@@ -17,12 +17,11 @@
         <link type="text/css" rel="stylesheet" href="styles.css">
 
 		<!-- JAVA SCRIPT -->
-		<script type='text/javascript' src="js/vendor/modernizr-2.6.2.min.js"></script>
+		<script type='text/javascript' src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.6.2.js"></script>
 
 	</head>
 
 	<body>
-
 		<div class="container">
 			<section class="main-section sixteen columns">
 				<header class="site-header sixteen columns alpha">
