--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
 				</header>
 
 				<header class="page-header sixteen columns alpha">
-					<h3>Registration Form</h3>
+					<h4>Registration Form</h4>
 				</header>
 
 				<section class="left-side twelve columns alpha">
 					<section class="custom-form">
 						<section class="form-section">
 							<article class="question">
-								<p>Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing.</p>
+								<p>Name</p>
 							</article>
 							<article class="question">
-								<p>Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing.</p>
+								<p>Address</p>
 							</article>
 						</section>
 					</section>
 				</section>
-				<section class="right-side four columns omega"> 
+				<section class="side-bar four columns omega"> 
 					<article class="right-side-article">
 						<p>Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing.</p>
 					</article>
@@ -59,7 +59,14 @@
 
 				</section>
 			</section>
-
+			<footer>
+				<ul>
+					<li>Terms of User</li>
+					<li>Security</li>
+					<li>Your Privacy Rights</li>
+					<li>Contact Us</li>
+				</ul>
+			</footer>
 		<!-- JAVA SCRIPT -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
 	</body>
